created seed file with faker

--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,1 +1,12 @@
-show.html.erb
+<!-- navbar -->
+<div class="navbar-lewagon">
+
+</div>
+<!-- watch banner -->
+
+<div class="banner">
+  <img src="" alt="">
+</div>
+<!-- name -->
+<!-- price -->
+<!-- book now form -->
