--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,1 +1,30 @@
-index.html.erb
+<nav class="navbar navbar-light bg-light justify-content-end">
+    <button class="btn btn-outline-success" type="button"><%= link_to 'Log In', new_user_session_path %></button>
+</nav>
+
+<div class="jumbotron jumbotron-fluid">
+    <img src="" alt="">
+      <h1 class="display-3 text-center">Watches for hire</h1>
+      <p class="lead text-center">Search for watches to hire</p>
+</div>
+
+<div class="d-flex justify-content-center m-4">
+  <%= link_to watches_path do  %>
+    <button type="button" class="btn btn-primary">Dead Button</button>
+  <% end %>
+</div>
+
+<div class="container">
+  <div class="row justify-content-between">
+    <% @watches.each do |watch| %>
+      <tr>
+          <div class="card text-center m-3" class="col-sm-4" style="width: 18rem;">
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1508962914676-134849a727f0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Card image cap">
+
+            <%= link_to watch.name, watch_path(watch) %>
+          </div>
+      </tr>
+    <% end %>
+  </div>
+</div>
+
