--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-6 col-offset-3">
+      <h1>Book Your Selected Watch</h1>
+        <%= simple_form_for([@watch, @booking]) do |f| %>
+          <%= f.input :start_date %>
+          <%= f.input :end_date %>
+          <%= f.submit 'Book Watch' %>
+        <% end %>
+    </div>
+  </div>
+</div>
