--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+.hero-image {
+  width: 100%;
+  height:80vh;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+}
+
+.hero-text-wrapper {
+  display: flex; align-items: center;
+}
