--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,16 @@
-<h1>Home</h1>
+
+<div class="jumbotron-fluid" style="background-color: #FFF;">
+  <div class="container">
+    <div class="row" style="padding-top: 16px;">
+      <div class="hero-text-wrapper col-4">
+        <div class="hero-text">
+          <h2>Watch Hunter</h2>
+          <p>An online marketplace for leasing your watch or renting from others.</p>
+        </div>
+      </div>
+      <div class="col-8 hero-image" style="background-image: url('<%= asset_path('three_watches')%>');">
+      </div>
+    </div>
+  </div>
+</div>
+
