Navbar links fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 <!-- Navbar: logo /home left, middle search / book, right create / login -->
-    <%= render 'navbar' %>
+    <%= render 'pages/navbar' %>
     <%= yield %>
   </body>
 </html>
