--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
           <p>An online marketplace for leasing your watch or renting from others.</p>
         </div>
       </div>
-      <div class="col-8 hero-image" style="background-image: url('<%= asset_path('three_watches')%>');">
+      <div class="col-8 hero-image" style="background-image: url('<%= image_path('three_watches')%>');">
       </div>
     </div>
   </div>
