features/added cards/connections and styling to user show view

--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -8,22 +8,28 @@
       <p class="lead text-center">Search for watches to hire</p>
 </div>
 
+<!--
 <div class="d-flex justify-content-center m-4">
   <%= link_to watches_path do  %>
     <button type="button" class="btn btn-primary">Dead Button</button>
   <% end %>
 </div>
+-->
 
 <div class="container">
-  <div class="row justify-content-between">
+  <div class="cards">
     <% @watches.each do |watch| %>
-      <tr>
-          <div class="card text-center m-3" class="col-sm-4" style="width: 18rem;">
-            <!-- <img class="card-img-top" src="https://images.unsplash.com/photo-1508962914676-134849a727f0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Card image cap"> -->
-            <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+      <div class="card-trip">
+        <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+        <div class="card-trip-infos">
+          <div>
             <%= link_to watch.name, watch_path(watch) %>
+            <p><%= watch.brand %></p>
           </div>
-      </tr>
+          <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
