--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,43 +1,34 @@
-<div class="container m-3">
-  <h3>My Bookings</h3>
-    <div class="row justify-content-between">
-          <% @bookings.each do |booking| %>
-            <tr>
-                <div class="card text-center m-3" class="col-sm-4" style="width: 18rem;">
-                  <img class="card-img-top" src="https://images.unsplash.com/photo-1508962914676-134849a727f0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-                    <div class="d-flex justify-content-center m-4">
-                      <%= link_to user_path do  %>
-                        <button type="button" class="btn btn-primary m-2">Delete</button>
-                      <% end %>
-                      <%= link_to user_path do  %>
-                        <button type="button" class="btn btn-primary m-2">Update</button>
-                      <% end %>
-                    </div>
+<div class="container">
+      <h2>My Watches</h2>
+      <div class="cards">
+        <% @watches.each do |watch| %>
+          <div class="card-trip">
+            <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+              <div class="card-trip-infos">
+                <div>
+                  <p><%= watch.brand %></p>
                 </div>
-            </tr>
-          <% end %>
+                <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+            </div>
+          </div>
+        <% end %>
       </div>
-  </div>
- </div>
-
-<div class="container m-3">
-  <h3>My Watches</h3>
-      <div class="row justify-content-between">
-          <% @watches.each do |watch| %>
-            <tr>
-                <div class="card text-center m-3" class="col-sm-4" style="width: 18rem;">
-                  <img class="card-img-top" src="https://images.unsplash.com/photo-1508962914676-134849a727f0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-                    <div class="d-flex justify-content-center m-4">
-                        <%= link_to user_path do  %>
-                          <button type="button" class="btn btn-primary m-2">Delete</button>
-                        <% end %>
-                        <%= link_to user_path do  %>
-                          <button type="button" class="btn btn-primary m-2">Update</button>
-                        <% end %>
-                    </div>
-                </div>
-            </tr>
-          <% end %>
-    </div>
-  </div>
+      <h2>My Bookings</h2>
+      <div class="cards">
+        <% @bookings.each do |booking| %>
+          <div class="card-trip">
+            <%= cl_image_tag booking.watch.photo.key, crop: :fill if booking.watch.photo.attached?%>
+            <div class="card-trip-infos">
+              <div>
+                <p><%= booking.watch.brand %></p>
+                <p>Booked From - <%= booking.start_date %></p>
+                <p>Booked To   - <%= booking.end_date %></p>
+              </div>
+              <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
+              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+            </div>
+          </div>
+        <% end %>
+      </div>
 </div>
