--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
-    <div class="col-6 col-offset-3">
+    <div class="col-6 col-offset-3 new-booking">
+      <div align='center'>
       <h1>Book Your Selected Watch</h1>
-      <%= cl_image_tag @watch.photo.key, crop: :fill if @watch.photo.attached?%>
-        <%= simple_form_for([@watch, @booking]) do |f| %>
-          <%= f.input :start_date %>
-          <%= f.input :end_date %>
-          <%= f.submit 'Book Watch' %>
-        <% end %>
+        <%= cl_image_tag @watch.photo.key, crop: :fill if @watch.photo.attached?%>
+      </div>
+      <%= simple_form_for([@watch, @booking]) do |f| %>
+        <%= f.input :start_date %>
+        <%= f.input :end_date %>
+        <div align='center'><%= f.submit 'Book Watch', class: 'btn btn-success mb-4' %></div>
+      <% end %>
     </div>
   </div>
 </div>
