--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,34 @@
 <div class="container">
-      <h2>My Watches</h2>
-      <div class="cards">
-        <% @watches.each do |watch| %>
-          <div class="card-trip">
-            <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
-              <div class="card-trip-infos">
-                <div>
-                  <p><%= watch.brand %></p>
-                </div>
-                <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
-              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+  <h2>My Listings</h2>
+  <div class="cards">
+    <% @watches.each do |watch| %>
+      <div class="card-trip">
+        <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+          <div class="card-trip-infos">
+            <div>
+              <p><%= watch.brand %></p>
             </div>
-          </div>
-        <% end %>
+            <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
       </div>
-      <h2>My Bookings</h2>
-      <div class="cards">
-        <% @bookings.each do |booking| %>
-          <div class="card-trip">
-            <%= cl_image_tag booking.watch.photo.key, crop: :fill if booking.watch.photo.attached?%>
-            <div class="card-trip-infos">
-              <div>
-                <p><%= booking.watch.brand %></p>
-                <p>Booked From - <%= booking.start_date %></p>
-                <p>Booked To   - <%= booking.end_date %></p>
-              </div>
-              <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
-              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-            </div>
+    <% end %>
+  </div>
+  <h2>My Bookings</h2>
+  <div class="cards">
+    <% @bookings.each do |booking| %>
+      <div class="card-trip">
+        <%= cl_image_tag booking.watch.photo.key, crop: :fill if booking.watch.photo.attached?%>
+        <div class="card-trip-infos">
+          <div>
+            <p><%= booking.watch.brand %></p>
+            <p>Booked From - <%= booking.start_date %></p>
+            <p>Booked To   - <%= booking.end_date %></p>
           </div>
-        <% end %>
+          <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
       </div>
+    <% end %>
+  </div>
 </div>
