--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,55 @@
 <div class="container">
-  <h2>My Listings</h2>
-  <div class="cards">
-    <% @watches.each do |watch| %>
-      <div class="card-trip">
-        <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
-          <div class="card-trip-infos">
-            <div>
-              <p><%= watch.brand %></p>
-            </div>
-            <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-        </div>
-      </div>
-    <% end %>
-  </div>
-  <h2>My Bookings</h2>
-  <div class="cards">
-    <% @bookings.each do |booking| %>
-      <div class="card-trip">
-        <%= cl_image_tag booking.watch.photo.key, crop: :fill if booking.watch.photo.attached?%>
-        <div class="card-trip-infos">
-          <div>
-            <p><%= booking.watch.brand %></p>
-            <p>Booked From - <%= booking.start_date %></p>
-            <p>Booked To   - <%= booking.end_date %></p>
+  <div class="row">
+    <div class="spacer col-3"></div>
+    <div class="user-show-tabs col-6">
+      <ul class="nav nav-tabs mt-4 col-12 justify-content-center" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" href="#listings" role="tab" data-toggle="tab">My Listings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#bookings" role="tab" data-toggle="tab">My Bookings</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="listings">
+          <% if @watches.empty? %>
+            <h3 class="mt-5" align="center">No Listings</h3>
+          <% end %>
+          <div class="cards">
+            <% @watches.each do |watch| %>
+              <div class="card-trip">
+                <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached? %>
+                <div class="card-trip-infos">
+                  <div><p><%= watch.brand %></p></div>
+                  <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+                <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+                </div>
+              </div>
+            <% end %>
           </div>
-          <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
+        <div class="tab-pane" id="bookings">
+          <% if @bookings.empty? %>
+            <h3 class="mt-5" align="center">No Bookings</h3>
+          <% end %>
+          <div class="cards">
+            <% @bookings.each do |booking| %>
+              <div class="card-trip">
+                <%= cl_image_tag booking.watch.photo.key, crop: :fill if booking.watch.photo.attached?%>
+                <div class="card-trip-infos">
+                  <div>
+                    <p><%= booking.watch.brand %></p>
+                    <p>Booked From - <%= booking.start_date %></p>
+                    <p>Booked To   - <%= booking.end_date %></p>
+                  </div>
+                  <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
+                  <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+                </div>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
