--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,6 +70,17 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+.card-product{
+  .right-hand-side {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 72%;
+  }
+  .btn-danger {
+    height: 50%;
+  }
+}
 .nav-item a {
   text-decoration: none;
   color: $success;
