Bookings changed to product cards, added delete button

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -80,6 +80,10 @@
   .btn-danger {
     height: 50%;
   }
+  .btn-danger a {
+    text-decoration: none;
+    color: #FFF;
+  }
 }
 .nav-item a {
   text-decoration: none;
