bookings now have a total price column that is calculated when they book. watch cards are changed to price/day and booking cards have the total price on them

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
             <div>
               <p><%= watch.brand %></p>
             </div>
-            <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+            <h2 class="card-trip-pricing"> £<%= watch.price %>/day</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
       </div>
@@ -25,7 +25,7 @@
             <p>Booked From - <%= booking.start_date %></p>
             <p>Booked To   - <%= booking.end_date %></p>
           </div>
-          <h2 class="card-trip-pricing"> £<%=booking.watch.price %></h2>
+          <h2 class="card-trip-pricing"> £<%=booking.total_price %></h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
       </div>
