--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -22,7 +22,7 @@
             <%= link_to watch.name, watch_path(watch) %>
             <p><%= watch.brand %></p>
           </div>
-          <h2 class="card-trip-pricing"> £<%=watch.price %></h2>
+          <h2 class="card-trip-pricing"> £<%=watch.price %>/day</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
       </div>
