--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
                   <p>Booked From - <%= booking.start_date %></p>
                   <p>Booked To   - <%= booking.end_date %></p>
                 </div>
-                <button class="btn btn-danger"> <%= link_to "Delete", watch_bookings_path(booking), method: :delete, data: { confirm: "Are you sure?" } %> </button>
+                <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
               </div>
             </div>
           <% end %>
