--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,13 +2,16 @@
   <div class="row justify-content-center mt-5">
     <div class="col-6 col-offset-3 new-booking">
       <div align='center'>
+      <div id="watch_price" class="d-none">
+        <%= @watch.price %>
+      </div>
       <h1>Book Your Selected Watch</h1>
         <%= cl_image_tag @watch.photo.key, crop: :fill if @watch.photo.attached?%>
       </div>
       <%= simple_form_for([@watch, @booking]) do |f| %>
         <%= f.input :start_date%>
         <%= f.input :end_date%>
-        <div align='center'><%= f.submit 'Book Watch', class: 'btn btn-success mb-4' %></div>
+        <div align='center'><%= f.submit 'Book Watch', class: 'btn btn-success mb-4', id: 'js-button'%></div>
       <% end %>
     </div>
   </div>
