feature#59/ made cards on watches index clickable links

--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -13,20 +13,20 @@
 -->
 
 <div class="container">
-  <div class="cards">
-    <% @watches.each do |watch| %>
-      <div class="card-trip">
-        <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
-        <div class="card-trip-infos">
-          <div>
-            <%= link_to watch.name, watch_path(watch) %>
-            <p><%= watch.brand %></p>
-          </div>
-          <h2 class="card-trip-pricing"> £<%=watch.price %>/day</h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-        </div>
-      </div>
-    <% end %>
-  </div>
+    <div class="cards">
+      <% @watches.each do |watch| %>
+        <%= link_to watch_path(watch), class:"card-trip" do  %>
+            <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+            <div class="card-trip-infos">
+              <div>
+                <h6><%= watch.brand %></h6>
+                <p><%= watch.name %></p>
+              </div>
+              <h2 class="card-trip-pricing"> £<%=watch.price %>/day</h2>
+              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+            </div>
+        <% end %>
+      <% end %>
+    </div>
 </div>
 
