--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,8 +3,15 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 300px;
-  margin: 10px
+  margin: 10px;
+  color: black;
 }
+
+.card-trip:hover {
+  color: black;
+  text-decoration: none;
+}
+
 .card-trip > img {
   height: 200px;
   width: 100%;
@@ -42,6 +49,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
   padding: 16px;
+  text-decoration: none;
+  
 }
 .card-product {
   overflow: hidden;
