--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
                     <h2><%= watch.brand %></h2>
                     <p><strong> £<%=watch.price %></strong> per day</p>
                   </div>
-                  <a href="" class="btn btn-danger">Delete</a>
+                  <button class="btn btn-danger"> <%= link_to "Delete", watch_path(watch), method: :delete, data: { confirm: "Are you sure?" } %> </button>
                 </div>
               </div>
             <% end %>
@@ -44,7 +44,7 @@
                   <p>Booked From - <%= booking.start_date %></p>
                   <p>Booked To   - <%= booking.end_date %></p>
                 </div>
-                <button class="btn btn-danger"> <%= link_to "Delete", watch_bookings_path(booking), method: :delete, data: { confirm: "Are you sure?" } %> </button>
+                <button class="btn btn-danger"> <%= link_to "Delete", watch_booking_path(booking), method: :delete, data: { confirm: "Are you sure?" } %> </button>
               </div>
             </div>
           <% end %>
