--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
                     <h2><%= watch.brand %></h2>
                     <p><strong> £<%=watch.price %></strong> per day</p>
                   </div>
-                  <button class="btn btn-danger"> <%= link_to "Delete", watch_path(watch), method: :delete, data: { confirm: "Are you sure?" } %> </button>
+                  <%= link_to "Delete", watch_path(watch), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-danger'%>
                 </div>
               </div>
             <% end %>
