--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,37 +1,27 @@
-<div class="jumbotron jumbotron-fluid">
-    <img src="" alt="">
-      <h1 class="display-3 text-center">Watches for hire</h1>
-      <p class="lead text-center">Search for watches to hire</p>
-</div>
-
-<!--
-<div class="d-flex justify-content-center m-4">
-  <%= link_to watches_path do  %>
-    <button type="button" class="btn btn-primary">Dead Button</button>
-  <% end %>
-</div>
--->
-
-<div class="container">
-  <div class="cards">
-    <% @watches.each do |watch| %>
-      <div class="card-trip">
-        <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
-        <div class="card-trip-infos">
-          <div>
-            <%= link_to watch.name, watch_path(watch) %>
-            <p><%= watch.brand %></p>
+<div class="w-100">
+  <h3 class="text-center mt-4">Watches for hire</h3>
+  <div class="row">
+    <div class="cards col-8">
+      <% @watches.each do |watch| %>
+        <div class="card-trip">
+          <%= cl_image_tag watch.photo.key, crop: :fill if watch.photo.attached?%>
+          <div class="card-trip-infos">
+            <div>
+              <%= link_to watch.name, watch_path(watch) %>
+              <p><%= watch.brand %></p>
+            </div>
+            <h2 class="card-trip-pricing"> £<%=watch.price %>/day</h2>
+            <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
           </div>
-          <h2 class="card-trip-pricing"> £<%=watch.price %>/day</h2>
-          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
+      <% end %>
+    </div>
+    <div class="col-3">
+      <div id="map"
+           style="width: 125%; height: 75vh;"
+           data-markers="<%= @markers.to_json %>"
+           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
-    <% end %>
-  </div>
-  <div id="map"
-       style="width: 100%; height: 600px;"
-       data-markers="<%= @markers.to_json %>"
-       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
 </div>
-
