--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,7 +13,7 @@
   box-shadow: 0.5px 0.5px #bebebe;
 }
 
-.card-trip > img {s
+.card-trip > img {
   height: 200px;
   width: 100%;
   object-fit: cover;
