--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-100">
-  <h3 class="text-center mt-4">Watches for hire</h3>
+  <!-- <h3 class="text-center mt-4">Watches for hire</h3> -->
   <div class="row pl-1 pr-3">
     <div class="cards col-8">
       <% @watches.each do |watch| %>
