--- a/app/assets/stylesheets/pages/_watches_show.scss
+++ b/app/assets/stylesheets/pages/_watches_show.scss
@@ -1,6 +1,7 @@
 .watch-detail {
   .btn {
     width: 50%;
+    border-radius: 15px;
   }
 }
 
@@ -13,3 +14,51 @@
   .hover { display: inline; }
 }
 
+
+
+body {
+  background: #E0E0E0
+}
+
+.details {
+  border: 1.5px solid grey;
+  color: #212121;
+  width: 100%;
+  height: auto;
+  box-shadow: 0px 0px 10px #212121
+}
+
+.cart {
+  background-color: #212121;
+  color: white;
+  margin-top: 10px;
+  font-size: 12px;
+  font-weight: 900;
+  width: 100%;
+  height: 39px;
+  padding-top: 9px;
+  box-shadow: 0px 5px 10px #212121
+}
+
+.card {
+  width: fit-content
+}
+
+.card-body {
+  width: fit-content
+}
+
+.btn {
+  border-radius: 0
+}
+
+.img-thumbnail {
+  border: none;
+  margin-top: 12px;
+}
+
+.card {
+  box-shadow: 0 20px 40px rgba(0, 0, 0, .2);
+  border-radius: 5px;
+  padding-bottom: 10px
+}
